# learning-playground

./: .pre-commit-config.yaml  .yamllint.yaml  README.md  main.tf  outputs.tf  terraform.tfvars  variables.tf
.github/workflows/: verify-linux-shared-lib.yaml  verify-terraform.yaml  verify.yaml
linux-shared-lib/: .clang-format  .gitignore  CMakeLists.txt  README.md
linux-shared-lib/app/: CMakeLists.txt
linux-shared-lib/app/src/: main.cpp
linux-shared-lib/images/: .dockleignore  README.md  docker-bake.hcl
linux-shared-lib/images/clang/: Dockerfile
linux-shared-lib/images/gcc/: Dockerfile
linux-shared-lib/libbar/: CMakeLists.txt
linux-shared-lib/libbar/include/: bar.hpp
linux-shared-lib/libbar/src/: bar.cpp
linux-shared-lib/libbar/tests/: CMakeLists.txt  test.cpp
linux-shared-lib/libfoo/: CMakeLists.txt  libfoo.map
linux-shared-lib/libfoo/include/: foo.hpp
linux-shared-lib/libfoo/src/: foo.cpp  internal.cpp  internal.hpp
linux-shared-lib/libfoo/tests/: CMakeLists.txt  test.cpp
local-llm/: README.md
rg-create/: main.tf  outputs.tf  variables.tf
terraform/: README.md
terraform/aws-ec2/: README.md  ebs_volume.tf  instance.tf  outputs.tf  security_groups.tf
terraform/aws-s3/: README.md  bucket.tf  bucket_policy.json  main.tf  outputs.tf  replica.tf  website.tf
terraform/az-experiments/: main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/az-experiments/rg-create/: main.tf  variables.tf
terraform/az-vm/: .gitignore  README.md  main.tf  network.tf  outputs.tf  vm.tf
terraform/rg-create/: outputs.tf
typescript/simple-project/: package-lock.json  package.json
